--- a/networkinfo/app_users/templates/app_users/logout.html
+++ b/networkinfo/app_users/templates/app_users/logout.html
@@ -4,13 +4,13 @@
   <div class="container">
     <h1 class="mt-5">Прощайте</h1>
     <p class="lead">Вы успешно вышли из системы</p>
-		<p>Если это не произошло нажмите <a href="{% url 'programmers:search-pc' %}">Вернуться</a></p>
+		<p>Если это не произошло нажмите <a href="{% url 'main_page:main' %}">Вернуться</a></p>
 		<p>Вы будете перенаправлены на гланую страницу через 5 секунд...</p>
   </div>
 </main>
 	<script type="text/javascript">
       function Redirect() {
-          window.location = "{% url 'programmers:search-pc' %}";
+          window.location = "{% url 'main_page:main' %}";
       }
       setTimeout('Redirect()', 5000);
 	</script>
