--- a/networkinfo/static_root/css/style.css
+++ b/networkinfo/static_root/css/style.css
@@ -55,10 +55,12 @@
 }
 
 .btn-search:hover {
+    color: white;
     background-color: #0b5ed7;
 }
 
 .btn-search:active {
+    color: white;
     background-color: #0d6efd;
 }
 
@@ -106,7 +108,14 @@
 
 .main_menu {
     border-color: #0072c6;
+    border-radius: 25px;
     background: linear-gradient(to left, white, #0072c6);
+    opacity: 1;
+    transition: opacity .3s ease-in-out;
+}
+
+.main_menu:hover, .main_menu:active {
+    opacity: 0.7;
 }
 
 .card-heading {
