added searching user's computers

--- a/networkinfo/main_page/templates/main_page/main.html
+++ b/networkinfo/main_page/templates/main_page/main.html
@@ -17,7 +17,7 @@
 				<a href="{% url 'programmers:search-pc' %}"
 					 class="main_menu card card-cover h-100 overflow-hidden text-white rounded-5">
 					<div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-						<h2 class="mt-5 mb-4 display-6 lh-1 fw-bold card-heading">Информация по ПК</h2>
+						<h2 class="mt-5 mb-4 display-6 lh-1 fw-bold card-heading">Поиск информаци</h2>
 					</div>
 				</a>
 			</div>
