--- a/networkinfo/programmers/templates/programmers/base.html
+++ b/networkinfo/programmers/templates/programmers/base.html
@@ -53,5 +53,6 @@
 			{% endblock %}
 		</main>
 		<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+		<script src="{% static 'js/search_type.js' %}"></script>
 	</body>
 </html>
