fixed query on depart department_list_statistic.py, refactored with strategy pattern department_list_statistic.py. added date filter

--- a/networkinfo/static/css/style.css
+++ b/networkinfo/static/css/style.css
@@ -43,6 +43,7 @@
     width: 40%;
     margin-right: 4px;
 }
+
 .search-input {
     width: 60%;
     height: auto;
@@ -128,4 +129,12 @@
 
 .card-heading {
     padding: 0;
+}
+
+.department-statistic {
+    padding-top: 30px;
+}
+
+.department-statistic__filter {
+    margin-bottom: 15px;
 }
