--- a/networkinfo/main_page/templates/main_page/main.html
+++ b/networkinfo/main_page/templates/main_page/main.html
@@ -21,6 +21,16 @@
 					</div>
 				</a>
 			</div>
+			{% if perms.create_user.view_usercreatemodel %}
+				<div class="col">
+					<a href="{% url 'telephone_billing:billing_main' %}"
+						 class="main_menu card card-cover h-100 overflow-hidden text-white rounded-5">
+						<div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+							<h2 class="mt-5 mb-4 display-6 lh-1 fw-bold card-heading">Статистика по IP телефонии</h2>
+						</div>
+					</a>
+				</div>
+			{% endif %}
 		</div>
 	</div>
 {% endblock %}
