added animation in search button, add checking if personal_number exists in database

--- a/networkinfo/programmers/templates/programmers/base.html
+++ b/networkinfo/programmers/templates/programmers/base.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" href="{% static 'css/normalize.css' %}">
 		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
+		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/loadingio/ldbutton@v1.0.1/dist/ldbtn.min.css"/>
+
 		<title>{{ title }}</title>
 	</head>
 	<body>
@@ -55,5 +57,7 @@
 		</main>
 		<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 		<script src="{% static 'js/search_type.js' %}"></script>
+		<script src="{% static 'js/search_btn.js' %}"></script>
+		<script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
 	</body>
 </html>
