--- a/networkinfo/create_user/templates/create_user/create_user.html
+++ b/networkinfo/create_user/templates/create_user/create_user.html
@@ -12,9 +12,11 @@
 					</ul>
 				{% endif %}
 				<form action="" method="get" class="mb-3 create_form">
-					<input style="margin-bottom: 15px" type="number" name="personal_number" class="form-control"
+					<input style="margin-bottom: 15px" type="number" name="personal_number" class="form-control" id="tab_number"
 								 placeholder="Табельный номер" required>
-					<button type="submit" class="btn-reset btn-search">Найти</button>
+					<button id="btn_search" class="btn-search" type="submit">Найти
+						<span class="load loading"></span>
+					</button>
 				</form>
 			{% else %}
 				<form action="" method="get" class="mb-3 create_form">
