fixed many clicking on search button

--- a/networkinfo/create_user/templates/create_user/create_user.html
+++ b/networkinfo/create_user/templates/create_user/create_user.html
@@ -11,7 +11,7 @@
 						{% endfor %}
 					</ul>
 				{% endif %}
-				<form action="" method="get" class="mb-3 create_form">
+				<form action="" method="get" class="mb-3 create_form" id="create_user_form">
 					<input style="margin-bottom: 15px" type="number" name="personal_number" class="form-control" id="tab_number"
 								 placeholder="Табельный номер" required>
 					<button id="btn_search" class="btn-search" type="submit">Найти
