--- a/networkinfo/create_user/templates/create_user/create_user.html
+++ b/networkinfo/create_user/templates/create_user/create_user.html
@@ -45,7 +45,7 @@
 							{% endfor %}
 						</ul>
 					{% endif %}
-					<input type="text" name="login" class="form-control login_input" placeholder="Введите логин" required>
+					<input type="text" name="login" class="form-control login_input" placeholder="Введите логин..." value="{{login}}" required>
 					<label class="form-check-label">Секретарь
 						<input class="form-check-input" type="checkbox" name="secretary" id="secretary">
 					</label>
